k8s-yaml/frontend-backend/backend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ytsuboi/backend-server:0.1
        ports:
        - containerPort: 8081
