k8s-yaml/frontend-backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
  labels:
    app: backend
spec:
  ports:
    # the port that this service should serve on
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: tcp
  selector:
    app: backend
