k8s-yaml/frontend-backend/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
  labels:
    app: frontend
spec:
  ports:
    # the port that this service should serve on
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: tcp
  selector:
    app: frontend
