k8s-yaml/frontend-backend/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: frontend
spec:
  rules:
  - host: frontend.ytsuboi.local
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8080
